@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclUnixPipe.c,v 1.7 1999/12/12 02:27:20 hobbs Exp $
+ * RCS: @(#) $Id: tclUnixPipe.c,v 1.8 2000/03/27 18:34:32 ericm Exp $
  */
 
 #include "tclInt.h"
@@ -147,7 +147,7 @@ TclpOpenFile(fname, mode)
 	 */
 
 	if (mode & O_WRONLY) {
-	    lseek(fd, 0, SEEK_END);
+	    lseek(fd, (off_t) 0, SEEK_END);
 	}
 
 	/*
@@ -198,7 +198,7 @@ TclpCreateTempFile(contents)
 	    close(fd);
 	    return NULL;
 	}
-	lseek(fd, 0, SEEK_SET);
+	lseek(fd, (off_t) 0, SEEK_SET);
     }
     return MakeFile(fd);
 }
